fix: remove mermaid graphs

--- a/docs/Tools/Docker/content/01.Intro_Course_Agenda.md
+++ b/docs/Tools/Docker/content/01.Intro_Course_Agenda.md
@@ -30,14 +30,10 @@ Docker is an open-source platform that automates the deployment, scaling, and ma
 
 **Mermaid Diagram: Docker Architecture**
 
-```mermaid
-graph LR
-    A[Developer] --> B[Docker CLI]
-    B --> C[Docker Daemon]
-    C --> D[Docker Images]
-    C --> E[Containers]
-    E --> F[Application]
-    F --> G[Host System]
+```text
+[Developer] --> [Docker CLI] --> [Docker Daemon]
+                             |--> [Docker Images]
+                             |--> [Containers] --> [Application] --> [Host System]
 ```
 
 ---
@@ -182,10 +178,8 @@ CMD ["node", "app.js"]
 
 **Mermaid Diagram: Images vs Containers**
 
-```mermaid
-graph TD
-    A[Docker Image] --> B[Docker Container]
-    B --> C[Running Application]
+```text
+[Docker Image] --> [Docker Container] --> [Running Application]
 ```
 
 ### 🛠 Docker Commands
@@ -561,13 +555,12 @@ docker run -d \
 
 **Mermaid Diagram: CI/CD Pipeline**
 
-```mermaid
-graph LR
-    A[Code Commit] --> B[Build]
-    B --> C[Test]
-    C --> D{Tests Passed?}
-    D -- Yes --> E[Deploy]
-    D -- No --> F[Notify Developer]
+```text
+[Code Commit] --> [Build] --> [Test] --> {Tests Passed?}
+                                          |
+                                    Yes --+--> [Deploy]
+                                          |
+                                    No  --+--> [Notify Developer]
 ```
 
 ---
@@ -618,13 +611,12 @@ docker service update --image myapp:newversion myapp
 
 **Mermaid Diagram: Rolling Update Process**
 
-```mermaid
-graph LR
-    A[Old Container] --> B[New Container]
-    B --> C[Health Check]
-    C --> D{Healthy?}
-    D -- Yes --> E[Shift Traffic]
-    D -- No --> F[Rollback]
+```text
+[Old Container] --> [New Container] --> [Health Check] --> {Healthy?}
+                                                          |
+                                                    Yes --+--> [Shift Traffic]
+                                                          |
+                                                    No  --+--> [Rollback]
 ```
 
 ---
