--- a/docs/Tools/Docker/content/02.Problem_Why_Docker.md
+++ b/docs/Tools/Docker/content/02.Problem_Why_Docker.md
@@ -56,15 +56,10 @@ Docker addresses several key challenges in modern software development and deplo
 
 **Diagram: Traditional Deployment vs. Docker Deployment**
 
-```mermaid
-graph LR
-    A[Developer Machine] --> B[Manual Setup]
-    A --> C[Deploy to Server]
-    C --> D[Environment Discrepancies]
+```text
+[Developer Machine] --(Manual Setup)--> [Deploy to Server] --> [Environment Discrepancies]
 
-    E[Developer Machine] --> F[Docker Container]
-    F --> G[Deploy to Server]
-    G --> H[Consistent Environment]
+[Developer Machine] --(Docker Container)--> [Deploy to Server] --> [Consistent Environment]
 ```
 
 ### 3. Managing Dependencies Across Environments 📦🔄
@@ -123,20 +118,14 @@ Docker addresses the challenges of onboarding, deployment, and dependency manage
 
 **Diagram: How Docker Solves Common Problems**
 
-```mermaid
-flowchart TD
-    A[Problems in Development & Deployment]
-    A --> B[Onboarding New Developers]
-    A --> C[Deploying Applications]
-    A --> D[Managing Dependencies]
-
-    B --> E[Docker Provides Standardized Environments]
-    C --> F[Docker Enables Consistent Deployment]
-    D --> G[Docker Ensures Isolated Dependency Management]
-
-    E --> H[Reduced Setup Time]
-    F --> I[Eliminated Environment Discrepancies]
-    G --> J[Prevention of Dependency Conflicts]
+```text
+[Problems in Development & Deployment]
+      |
+      +--> [Onboarding New Developers] --> [Docker Provides Standardized Environments] --> [Reduced Setup Time]
+      |
+      +--> [Deploying Applications] --> [Docker Enables Consistent Deployment] --> [Eliminated Environment Discrepancies]
+      |
+      +--> [Managing Dependencies] --> [Docker Ensures Isolated Dependency Management] --> [Prevention of Dependency Conflicts]
 ```
 
 ### Containers vs. Virtual Machines 🖥️🆚🧰
@@ -154,17 +143,18 @@ Understanding the difference between Docker containers and traditional virtual m
 
 **Diagram: Containers vs. Virtual Machines**
 
-```mermaid
-graph TD
-    A[Host Machine]
-    A --> B[Containers]
-    A --> C[Virtual Machines]
-
-    B --> D[Shared OS Kernel]
-    B --> E[Lightweight and Fast]
-
-    C --> F[Separate OS Instances]
-    C --> G[Resource-Intensive]
+```text
+[Host Machine]
+      |
+      +--> [Containers]
+      |         |
+      |         +--> [Shared OS Kernel]
+      |         +--> [Lightweight and Fast]
+      |
+      +--> [Virtual Machines]
+                |
+                +--> [Separate OS Instances]
+                +--> [Resource-Intensive]
 ```
 
 **Key Takeaways:**
@@ -191,14 +181,11 @@ To consolidate the information, here are additional tables and diagrams that hig
 
 ### Diagram: Docker Workflow
 
-```mermaid
-flowchart TD
-    A[Developer] --> B[Write Code]
-    B --> C[Create Dockerfile]
-    C --> D[Build Docker Image]
-    D --> E[Push to Docker Registry]
-    E --> F[Deploy Container to Environment]
-    F --> G[Application Runs Consistently]
+```text
+[Developer] --> [Write Code] --> [Create Dockerfile] --> [Build Docker Image]
+                                                                |
+                                                                v
+[Application Runs Consistently] <-- [Deploy Container] <-- [Push to Docker Registry]
 ```
 
 ### Table: Docker vs. Traditional Deployment
