--- a/docs/Tools/Docker/content/05.Images_Containers.md
+++ b/docs/Tools/Docker/content/05.Images_Containers.md
@@ -31,16 +31,17 @@
 2. **Dockerfile Builds Docker Image**: Execute commands to create the image.
 3. **Docker Image Runs Docker Container**: Launch the container from the built image.
 
-```mermaid
-graph TD;
-    A[Create a Dockerfile] --> B[Define Base Image]
-    B --> C[Set Working Directory]
-    C --> D[Copy Application Files]
-    D --> E[Install Dependencies]
-    E --> F[Expose Ports]
-    F --> G[Build Docker Image]
-    G --> H[Run Docker Container]
-    H --> I[Access Application]
+```text
+[Create a Dockerfile] --> [Define Base Image]
+                                |
+                                v
+[Copy Application Files] <-- [Set Working Directory]
+       |
+       v
+[Install Dependencies] --> [Expose Ports] --> [Build Docker Image]
+                                                     |
+                                                     v
+[Access Application] <-- [Run Docker Container]
 ```
 
 ---
