--- a/docs/Tools/Docker/content/06.Docker_Optimization.md
+++ b/docs/Tools/Docker/content/06.Docker_Optimization.md
@@ -182,14 +182,11 @@ docker run -d -p 3000:3000 --name my-node-app-container my-node-app:latest
 
 Let's visualize the entire Dockerization process using a Mermaid flowchart.
 
-```mermaid
-flowchart TD
-    A[Start] --> B[Write Dockerfile]
-    B --> C[Create .dockerignore]
-    C --> D[Build Docker Image]
-    D --> E[Run Docker Container]
-    E --> F[Access Application]
-    F --> G[End]
+```text
+[Start] --> [Write Dockerfile] --> [Create .dockerignore] --> [Build Docker Image]
+                                                                     |
+                                                                     v
+      [End] <-- [Access Application] <-- [Run Docker Container]
 ```
 
 ### 🌟 Key Steps
@@ -232,11 +229,8 @@ By copying `package.json` and `package-lock.json` separately and running `npm in
 
 ### 📊 Illustration
 
-```mermaid
-flowchart TD
-    A[Copy package*.json] --> B[Run npm install]
-    B --> C[Copy rest of the code]
-    C --> D[Build Image]
+```text
+[Copy package*.json] --> [Run npm install] --> [Copy rest of the code] --> [Build Image]
 ```
 
 ### 📉 Benefits
@@ -379,13 +373,14 @@ Docker builds images in layers. Each instruction in the `Dockerfile` creates a n
 
 ### 📈 Illustration
 
-```mermaid
-graph TD
-    A[FROM node:18-alpine] --> B[COPY package*.json ./]
-    B --> C[RUN npm install --production]
-    C --> D[COPY . .]
-    D --> E[EXPOSE 3000]
-    E --> F[CMD ["node", "index.js"]]
+```text
+[FROM node:18-alpine] --> [COPY package*.json ./]
+                                   |
+                                   v
+[COPY . .] <-- [RUN npm install --production]
+    |
+    v
+[EXPOSE 3000] --> [CMD ["node", "index.js"]]
 ```
 
 ---
@@ -424,11 +419,11 @@ By copying `package.json` and `package-lock.json` separately and running `npm in
 
 ### 📊 Visualization
 
-```mermaid
-flowchart TD
-    A[Copy package.json & package-lock.json] --> B[Run npm install]
-    B --> C[Copy rest of the code]
-    C --> D[Build Image with Cached Dependencies]
+```text
+[Copy package.json & package-lock.json] --> [Run npm install]
+                                                   |
+                                                   v
+[Build Image with Cached Dependencies] <-- [Copy rest of the code]
 ```
 
 ---
