--- a/docs/Tools/Docker/content/08.Docker_Volumes.md
+++ b/docs/Tools/Docker/content/08.Docker_Volumes.md
@@ -156,16 +156,18 @@ docker run --tmpfs /path/in/container my-image
 
 #### 5.1 Mermaid Graph for Volume Types
 
-```mermaid
-graph TD;
-    A[Docker Volumes] --> B[Bind Mounts]
-    A --> C[Named Volumes]
-    A --> D[Anonymous Volumes]
-    A --> E[Cached/Delegated Mounts]
-    A --> F[In-Memory Volumes]
-
-    B --> G[Two-Way Bind]
-    B --> H[One-Way Bind]
+```text
+[Docker Volumes]
+      |
+      +--> [Bind Mounts]
+      |         |
+      |         +--> [Two-Way Bind]
+      |         +--> [One-Way Bind]
+      |
+      +--> [Named Volumes]
+      +--> [Anonymous Volumes]
+      +--> [Cached/Delegated Mounts]
+      +--> [In-Memory Volumes]
 ```
 
 ---
