--- a/docs/Tools/Docker/content/15.Nginx_docs.md
+++ b/docs/Tools/Docker/content/15.Nginx_docs.md
@@ -33,15 +33,17 @@ Welcome to this comprehensive tutorial on **Nginx**! Whether you're a beginner o
 
 ### Mermaid Diagram: Nginx Architecture
 
-```mermaid
-graph LR
-    A[Client] -->|HTTP Request| B[Nginx Server]
-    B --> C{Reverse Proxy}
-    C -->|Server 1| D[Backend Server 1]
-    C -->|Server 2| E[Backend Server 2]
-    C -->|Server 3| F[Backend Server 3]
-    B --> G[Static Files]
-    B --> H[SSL/TLS Termination]
+```text
+[Client] --(HTTP Request)--> [Nginx Server]
+                                   |
+                                   +--> {Reverse Proxy}
+                                   |         |
+                                   |         +--> [Backend Server 1]
+                                   |         +--> [Backend Server 2]
+                                   |         +--> [Backend Server 3]
+                                   |
+                                   +--> [Static Files]
+                                   +--> [SSL/TLS Termination]
 ```
 
 ---
@@ -101,16 +103,14 @@ server {
 
 ### Mermaid Diagram: Reverse Proxy Flow
 
-```mermaid
-sequenceDiagram
-    participant Client
-    participant Nginx
-    participant Backend
-
-    Client->>Nginx: HTTP Request
-    Nginx->>Backend: Forward Request
-    Backend-->>Nginx: Response
-    Nginx-->>Client: Relay Response
+```text
+Client          Nginx          Backend
+  |               |               |
+  |--HTTP Request->|               |
+  |               |--Forward Req-->|
+  |               |               |
+  |               |<-Response------|
+  |<-Relay Resp---|               |
 ```
 
 ### Explanation:
@@ -157,12 +157,12 @@ http {
 
 ### Mermaid Diagram: Load Balancing
 
-```mermaid
-graph LR
-    A[Client] --> B[Nginx Server]
-    B --> C1[Backend Server 1]
-    B --> C2[Backend Server 2]
-    B --> C3[Backend Server 3]
+```text
+[Client] --> [Nginx Server]
+                   |
+                   +--> [Backend Server 1]
+                   +--> [Backend Server 2]
+                   +--> [Backend Server 3]
 ```
 
 ### Explanation:
@@ -254,17 +254,16 @@ server {
 
 ### Mermaid Diagram: HTTP to HTTPS Redirection
 
-```mermaid
-sequenceDiagram
-    participant Client
-    participant Nginx
-
-    Client->>Nginx: HTTP Request
-    Nginx-->>Client: 301 Redirect to HTTPS
-    Client->>Nginx: HTTPS Request
-    Nginx->>Backend: Forward HTTPS Request
-    Backend-->>Nginx: Response
-    Nginx-->>Client: Secure Response
+```text
+Client          Nginx
+  |               |
+  |--HTTP Request->|
+  |<-301 Redirect-|
+  |               |
+  |--HTTPS Req---->|
+  |               |--Forward HTTPS-> Backend
+  |               |<-Response------- Backend
+  |<-Secure Resp---|
 ```
 
 ---
