--- a/docs/Tools/Docker/content/18.Setup_Docker_on_AWS_EC2.md
+++ b/docs/Tools/Docker/content/18.Setup_Docker_on_AWS_EC2.md
@@ -36,12 +36,11 @@ Deploying Docker containers on **Amazon EC2** (Elastic Compute Cloud) provides a
 
 ### 🖼️ **EC2 Instance Lifecycle**
 
-```mermaid
-graph LR
-    A[Launch Instance] --> B[Run]
-    B --> C[Stop]
-    C --> B
-    B --> D[Terminate]
+```text
+[Launch Instance] --> [Run] --> [Terminate]
+                        ^  |
+                        |  v
+                      [Stop]
 ```
 
 _Figure 1: EC2 Instance Lifecycle_
@@ -437,12 +436,14 @@ Efficiently managing your Docker containers ensures smooth operation and mainten
 
 ### 📈 **Docker Compose Workflow Diagram**
 
-```mermaid
-graph TD
-    A[Write Dockerfile] --> B[Define Services in docker-compose.yml]
-    B --> C[Run docker-compose up]
-    C --> D[Containers Running]
-    D --> E[Manage with Docker Commands]
+```text
+[Write Dockerfile] --> [Define Services in docker-compose.yml]
+                                     |
+                                     v
+[Containers Running] <-- [Run docker-compose up]
+          |
+          v
+[Manage with Docker Commands]
 ```
 
 _Figure 2: Docker Compose Workflow_
